Custom and Default dialog

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MvvmRetro">
-        <activity android:name=".pagination.PaginationActivity">
+        <activity android:name=".dialogs.DialogsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activities.MainActivity">
+        <activity android:name=".pagination.PaginationActivity">
 
         </activity>
+        <activity android:name=".ui.activities.MainActivity"></activity>
     </application>
 
 </manifest>
