--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,18 +13,47 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MvvmRetro">
-        <activity android:name=".recyclerview.normarecyclerview.RegularRecyclerViewActivity">
+        <activity android:name=".SnackActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".recyclerview.ChatActivity">
+        <activity android:name=".chips.ChipsActivity">
 
         </activity>
+        <activity android:name=".deeplink.DeepLinkActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data
+                    android:host="www.nrb.org.np"
+                    android:scheme="https" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".intents.DataActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data
+                    android:host="www.nrb.org.np"
+                    android:pathPrefix="/categories/faqs"
+                    android:scheme="https" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".intents.MainActivity" />
+        <activity android:name=".recyclerview.heterogeneous.MainActivity" />
+        <activity android:name=".recyclerview.normarecyclerview.RegularRecyclerViewActivity" />
+        <activity android:name=".recyclerview.ChatActivity" />
         <activity android:name=".alarmmanager.DetailActivity" />
-        <activity android:name=".alarmmanager.DailyNotifyActivity"></activity>
+        <activity android:name=".alarmmanager.DailyNotifyActivity" />
         <activity android:name=".notification.NotificationActivity" />
         <activity android:name=".dialogs.DialogsActivity" />
         <activity android:name=".pagination.PaginationActivity" />
